--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,8 +12,8 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   sqflite: ^2.0.2
-  image_picker: ^0.8.5+3
-  firebase_core: ^2.4.0
+  image_picker: ^1.1.2
+  firebase_core: ^3.6.0
   intl: ^0.19.0
   
 
@@ -22,8 +22,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.13.1
-  flutter_lints: ^2.0.0
+  flutter_launcher_icons: ^0.14.1
+  flutter_lints: ^5.0.0
 
 flutter_icons:
   android: "launcher_icon"
