--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ flutter:
   assets:
     - assets/images/
     - assets/images/flicon.jpeg
+    - assets/american_flag.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
